# aws-bootcamp-cruddur-2023

./: .env.example  .gitignore  Makefile  compose.yaml
backend-flask/: .env  .env.example  Dockerfile  Makefile  app.py  openapi-3.0.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend-flask/services/: home_activities.py  notifications_activities.py
frontend-react-js/: Dockerfile  package-lock.json  package.json
frontend-react-js/src/: App.js
frontend-react-js/src/pages/: NotificationsPage.js
